# yas

./: .gitignore  Makefile  README.md  ReadMe.txt  main.pro
attic/: oocfg-oocfg.term  oocfg-oocfg.txt
attic/ontology/: languages.pro
docs/: index.md
docs/files/: docs-index.md.md  docs-languages-antlr.md.md  docs-languages-asl.md.md  docs-languages-bal.md.md  docs-languages-bcl.md.md  docs-languages-bfpl.md.md  docs-languages-bgl.md.md  docs-languages-bipl.md.md  docs-languages-bml.md.md  docs-languages-bnl.md.md  (+1345 more)
languages/BIPL/Python/LSP/: .gitignore  README.md  pyproject.toml
languages/BIPL/Python/LSP/bipl_lsp/: __init__.py  analysis.py  server.py
languages/BIPL/Python/LSP/examples/: bad.bipl  good.bipl
languages/BIPL/Python/LSP/tests/: test_analysis.py
languages/BIPL/Python/LSP/vscode/: language-configuration.json  package-lock.json  package.json  tsconfig.json
languages/BIPL/Python/LSP/vscode/src/: extension.ts
languages/BIPL/Python/LSP/vscode/syntaxes/: bipl.tmLanguage.json
languages/FSML/Python/LSP/: README.md  pyproject.toml
languages/FSML/Python/LSP/examples/: bad.fsml  good.fsml
languages/FSML/Python/LSP/fsml_lsp/: analysis.py  server.py
languages/FSML/Python/LSP/tests/: test_analysis.py
languages/FSML/Python/LSP/vscode/: language-configuration.json  package-lock.json  package.json
languages/FSML/Python/LSP/vscode/src/: extension.ts
languages/FSML/Python/LSP/vscode/syntaxes/: fsml.tmLanguage.json
prelude/: io.pro  multifile.pro  rewriting.pro  scanning.pro  syntax.pro  ueber.pro
tmp/: .gitignore
tools/: Makefile  elider.py
(+1966 files in other folders)
