[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "bipl-lsp"
version = "0.1.0"
description = "A Language Server Protocol implementation for BIPL, the Basic Imperative Programming Language of softlang/yas."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pygls>=1.3,<2",
  "lsprotocol>=2023.0.1",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
bipl-lsp = "bipl_lsp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
